crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__required_cascade_stops_runtime.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& runtime.code"
---
export const $GetTheme = {
	name: "GetTheme",
	body: "query GetTheme {\n  user {\n    __typename\n    id\n    settings {\n      __typename\n      id\n      theme {\n        __typename\n        id\n        primaryColor\n      }\n    }\n  }\n}",
	kind: "query",
	selections: [{
		kind: "Field",
		name: "user",
		type: "User",
		selections: [
			{
				kind: "Field",
				name: "__typename"
			},
			{
				kind: "Field",
				name: "id",
				type: "ID"
			},
			{
				kind: "Field",
				name: "settings",
				type: "Settings",
				nullable: true,
				selections: [
					{
						kind: "Field",
						name: "__typename"
					},
					{
						kind: "Field",
						name: "id",
						type: "ID"
					},
					{
						kind: "Field",
						name: "theme",
						type: "Theme",
						selections: [
							{
								kind: "Field",
								name: "__typename"
							},
							{
								kind: "Field",
								name: "id",
								type: "ID"
							},
							{
								kind: "Field",
								name: "primaryColor",
								type: "String",
								nullable: true,
								directives: [{
									name: "required",
									args: { action: "CASCADE" }
								}]
							}
						]
					}
				]
			}
		]
	}]
};
export const artifactMap = { "\n            query GetTheme {\n                user {\n                    id\n                    settings {\n                        id\n                        theme {\n                            id\n                            primaryColor @required(action: CASCADE)\n                        }\n                    }\n                }\n            }\n        ": $GetTheme };
export const artifactByName = { "query:GetTheme": $GetTheme };
export const schema = { entities: {
	"Settings": { keyFields: ["id"] },
	"User": { keyFields: ["id"] },
	"Theme": { keyFields: ["id"] }
} };
export const graphql = (artifact) => artifactMap[artifact];
graphql.query = (name) => artifactByName["query:" + name];
graphql.mutation = (name) => artifactByName["mutation:" + name];
graphql.subscription = (name) => artifactByName["subscription:" + name];
graphql.fragment = (name) => artifactByName["fragment:" + name];
graphql.enum = (value) => value;
