crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__required_cascade_types.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& types.code"
---
import type { Artifact as $Artifact, Nullable as $Nullable, List as $List, FragmentRefs as $FragmentRefs, SchemaMeta as $SchemaMeta } from "mearie/types";
export type $Scalars = {
	ID: string;
	String: string;
	Int: number;
	Float: number;
	Boolean: boolean;
};
export type $Schema = $SchemaMeta<{
	scalars: {};
	entities: {
		User: {
			keyFields: {
				id: $Scalars["ID"];
			};
			fields: "profile" | "id";
		};
		Profile: {
			keyFields: {
				id: $Scalars["ID"];
			};
			fields: "avatar" | "id";
		};
	};
	queryFields: "user";
}>;
export type RequiredAction = "THROW" | "CASCADE";
export type GetUserAvatar$data = $Nullable<{
	user: $Nullable<{
		profile: $Nullable<{
			avatar: $Scalars["String"];
			id: $Scalars["ID"];
		}>;
		id: $Scalars["ID"];
	}>;
}>;
export type GetUserAvatar$vars = {};
export type GetUserAvatar = $Artifact<"query", "GetUserAvatar", GetUserAvatar$data, GetUserAvatar$vars>;
