crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__required_directive_runtime.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& runtime.code"
---
export const $GetUser = {
	name: "GetUser",
	body: "query GetUser {\n  user {\n    __typename\n    id\n    nickname\n    bio\n  }\n}",
	kind: "query",
	selections: [{
		kind: "Field",
		name: "user",
		type: "User",
		nullable: true,
		selections: [
			{
				kind: "Field",
				name: "__typename"
			},
			{
				kind: "Field",
				name: "id",
				type: "ID"
			},
			{
				kind: "Field",
				name: "nickname",
				type: "String",
				nullable: true,
				directives: [{ name: "required" }]
			},
			{
				kind: "Field",
				name: "bio",
				type: "String",
				nullable: true
			}
		]
	}]
};
export const artifactMap = { "\n            query GetUser {\n                user {\n                    id\n                    nickname @required\n                    bio\n                }\n            }\n        ": $GetUser };
export const artifactByName = { "query:GetUser": $GetUser };
export const schema = { entities: { "User": { keyFields: ["id"] } } };
export const graphql = (artifact) => artifactMap[artifact];
graphql.query = (name) => artifactByName["query:" + name];
graphql.mutation = (name) => artifactByName["mutation:" + name];
graphql.subscription = (name) => artifactByName["subscription:" + name];
graphql.fragment = (name) => artifactByName["fragment:" + name];
graphql.enum = (value) => value;
