crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__simple_query_types.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& types.code"
---
import type { Artifact as $Artifact, Nullable as $Nullable, List as $List, FragmentRefs as $FragmentRefs, SchemaMeta as $SchemaMeta } from "mearie/types";
export type $Scalars = {
	ID: string;
	String: string;
	Int: number;
	Float: number;
	Boolean: boolean;
};
export type $Schema = $SchemaMeta<{
	scalars: {};
	entities: {
		User: {
			keyFields: {
				id: $Scalars["ID"];
			};
			fields: "email" | "name" | "id";
		};
		Post: {
			keyFields: {
				id: $Scalars["ID"];
			};
			fields: "body" | "title" | "id";
		};
	};
	queryFields: "user" | "post";
}>;
export type RequiredAction = "THROW" | "CASCADE";
export type GetUser$data = {
	user?: $Nullable<{
		email?: $Nullable<$Scalars["String"]>;
		name: $Scalars["String"];
		id: $Scalars["ID"];
	}>;
};
export type GetUser$vars = {
	userId: $Scalars["ID"];
};
export type GetUser = $Artifact<"query", "GetUser", GetUser$data, GetUser$vars>;
