crates/native/src/pipeline/snapshots/mearie_native__pipeline__tests__subscription_runtime.snap
---
source: crates/native/src/pipeline/mod.rs
expression: "& runtime.code"
---
export const $OnMessageAdded = {
	name: "OnMessageAdded",
	body: "subscription OnMessageAdded($channelId: ID!) {\n  messageAdded(channelId: $channelId) {\n    __typename\n    id\n    text\n    sender\n  }\n}",
	kind: "subscription",
	selections: [{
		kind: "Field",
		name: "messageAdded",
		type: "Message",
		args: { channelId: {
			kind: "variable",
			name: "channelId"
		} },
		selections: [
			{
				kind: "Field",
				name: "__typename"
			},
			{
				kind: "Field",
				name: "id",
				type: "ID"
			},
			{
				kind: "Field",
				name: "text",
				type: "String"
			},
			{
				kind: "Field",
				name: "sender",
				type: "String"
			}
		]
	}],
	variableDefs: [{
		name: "channelId",
		type: "ID"
	}]
};
export const artifactMap = { "\n            subscription OnMessageAdded($channelId: ID!) {\n                messageAdded(channelId: $channelId) {\n                    id\n                    text\n                    sender\n                }\n            }\n        ": $OnMessageAdded };
export const artifactByName = { "subscription:OnMessageAdded": $OnMessageAdded };
export const schema = { entities: { "Message": { keyFields: ["id"] } } };
export const graphql = (artifact) => artifactMap[artifact];
graphql.query = (name) => artifactByName["query:" + name];
graphql.mutation = (name) => artifactByName["mutation:" + name];
graphql.subscription = (name) => artifactByName["subscription:" + name];
graphql.fragment = (name) => artifactByName["fragment:" + name];
graphql.enum = (value) => value;
